--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@ Nicole
 lixo.py
 lixo2.py
 Termodinamica_1
-
+Termodinamica_1/livro
 /Termodinamica_1/Resumo_Aulas.ipynb
 /Termodinamica_1/Dimensões_e_Unidades.ipynb
